--- a/samples/sample.html
+++ b/samples/sample.html
@@ -15,25 +15,55 @@
     var index = 1;
     var itemHtml = '<div><strong>제목</strong></div>' +
             '<div><img src="https://dummyimage.com/240x80/cccccc/0011ff"></div>' +
-            '<div>가격: 0원</div>';
-    var makeItemHtmls = function(count, startIndex) {
+            '<div>가격: 1,000원</div>';
+    var makeItems = function(count, startIndex) {
         startIndex = startIndex || 0;
 
         return tui.util.map(tui.util.range(startIndex, startIndex + count), function(index) {
-            return '<div>index: ' + index + '</div>' + itemHtml;
+            return {
+                height: 150,
+                contents: '<div>index: ' + index + '</div>' + itemHtml
+            }
         });
     };
-    var vs = new tui.component.VirtualScroll(container, {
-        scrollPosition: 100,
+    var items = makeItems(19);
+    var vs;
+
+    items.unshift({
+        height: 50,
+        contents: '<div style="width:100%;height:100%;background:lightgreen;">Header</div>'
+    });
+
+    items.push({
+        height: 50,
+        contents: '<div style="width:100%;height:100%;background:lightpink;">로딩중...</div>'
+    });
+    items.push({
+        height: 200,
+        contents: '<div style="width:100%;height:100%;background:skyBlue;">Footer</div>'
+    });
+
+    vs = new tui.component.VirtualScroll(container, {
+        scrollPosition: 0,
         itemHeight: 150,
         spareItemCount: 10,
-        layoutHeight: 500,
-        threshold: 400,
-        items: makeItemHtmls(50)
+        layoutHeight: 400,
+        items: items
     });
 
     vs.on('scrollBottom', function() {
-        vs.append(makeItemHtmls(10, index * 10));
+        if (index > 10) {
+            return;
+        }
+
+        setTimeout(function() {
+            vs.insert(makeItems(10, index * 10), vs.getItemCount() - 2);
+            index += 1;
+
+            if (index > 10) { // 더이상 추가할 item이 없을 때 "로딩중" 아이템 제거
+                vs.remove(vs.getItemCount() - 2);
+            }
+        }, 500);
     });
 </script>
 </body>
