chore & fix: 1.0.1 - commnets, jsdoc, deploy

--- a/examples/example.html
+++ b/examples/example.html
@@ -71,10 +71,12 @@
     </style>
 </head>
 <body>
-<div id="virtual-scroll-container"></div>
+<div class="code-html">
+    <div id="virtual-scroll-container"></div>
+</div>
 <script type="text/javascript" src="https://cdn.rawgit.com/nhnent/tui.code-snippet/1.2.1/code-snippet.js"></script>
-<script src="../dist/component-virtual-scroll.min.js"></script>
-<script>
+<script src="../dist/tui-component-virtual-scroll.js"></script>
+<script class="code-js">
     var container = document.getElementById('virtual-scroll-container');
     var index = 1;
     var contents = '<div class="title">Good deals<span class="price">$ 999</span></div>' +
