--- a/latest/tutorials/example.html
+++ b/latest/tutorials/example.html
@@ -9,6 +9,7 @@
         body {
             padding: 0;
             margin: 0;
+            font-family: Helvetica,'Helvetica Neue',Apple SD Gothic Neo,'noto sans',Arial,sans-serif;
         }
 
         #virtual-scroll-container {
@@ -27,11 +28,13 @@
         }
 
         .header {
+            padding-left: 15px;
             line-height: 50px;
             font-size: 20px;
             font-weight: bold;
-            background: cornflowerblue;
-            color: darkblue;
+            background: #ffffff;
+            color: #ef697d;
+            border-bottom: 6px solid #e6e6e6;
         }
 
         .loader {
@@ -41,32 +44,29 @@
 
         .footer {
             font-size: 11px;
-            color: #888888;
-            background:#efefef;
-        }
-
-        .title {
-            padding: 10px 5px 5px;
-            font-weight: bold;
-            font-size: 20px;
-            color: #555;
-            position: relative;
+            color: ##7e7f7f;
+            background:#ffffff;
         }
 
         .contents {
-            height: 110px;
-            padding-top: 10px;
+            height: 180px;
             text-align: center;
-            border-bottom: 1px solid #cccccc;
+        }
+
+        .title {
+            padding: 10px 14px 5px;
+            font-weight: bold;
+            font-size: 14px;
+            color: #464646;
+            position: relative;
         }
 
         .price {
-            position: absolute;
-            right: 10px;
-            bottom: 5px;
-            font-size: 14px;
+            padding: 0 15px 10px;
+            font-size: 16px;
             font-weight: bold;
-            color: darkred;
+            color: #ef697d;
+            border-bottom: 6px solid #e6e6e6;
         }
     </style>
 </head>
@@ -79,25 +79,74 @@
 <script class="code-js">
     var container = document.getElementById('virtual-scroll-container');
     var index = 1;
-    var contents = '<div class="title">Good deals<span class="price">$ 999</span></div>' +
-            '<div class="contents"><img src="https://dummyimage.com/240x80/cccccc/0011ff"></div>' +
-            '<div class="price"></div>';
+    var baseItems = [
+        {
+            title: 'Yankee Candle',
+            price: 300,
+            img: 'img/vs_img1.jpg'
+        }, {
+            title: 'Lamy pen',
+            price: 240,
+            img: 'img/vs_img2.jpg'
+        }, {
+            title: 'Ear ring',
+            price: 99,
+            img: 'img/vs_img3.jpg'
+        }, {
+            title: 'Premium detergent',
+            price: 199,
+            img: 'img/vs_img4.jpg'
+        }, {
+            title: 'Royce chocolate',
+            price: 410,
+            img: 'img/vs_img5.jpg'
+        }, {
+            title: 'Hair drier',
+            price: 210,
+            img: 'img/vs_img6.jpg'
+        }, {
+            title: 'Spare battery',
+            price: 110,
+            img: 'img/vs_img7.jpg'
+        }, {
+            title: 'Eyelashes',
+            price: 55,
+            img: 'img/vs_img8.jpg'
+        }, {
+            title: 'Beauty mask pack',
+            price: 75,
+            img: 'img/vs_img9.jpg'
+        }, {
+            title: 'Wet tissue',
+            price: 120,
+            img: 'img/vs_img10.jpg'
+        }
+    ];
+    var createItemHtml = function(item) {
+        return '<div class="contents"><img src="' + item.img + '"></div>' +
+               '<div class="title">' + item.title + '</div>' +
+               '<div class="price">$' + item.price + '</div>';
+    };
     var makeItems = function(count, startIndex) {
+        var baseItemCount = baseItems.length;
+
         startIndex = startIndex || 0;
 
-        return tui.util.map(tui.util.range(startIndex, startIndex + count), function() {
+        return tui.util.map(tui.util.range(startIndex, startIndex + count), function(index) {
+            var item = baseItems[index % baseItemCount];
+
             return {
-                height: 150,
-                contents: contents
+                height: 245,
+                contents: createItemHtml(item)
             }
         });
     };
-    var items = makeItems(19);
+    var items = makeItems(10);
     var vs;
 
     items.unshift({
-        height: 50,
-        contents: '<div class="header">&nbsp;Virtual Scroll</div>'
+        height: 56,
+        contents: '<div class="header">Virtual Scroll</div>'
     });
     items.push({
         height: 40,
@@ -124,7 +173,7 @@
         }
 
         setTimeout(function() {
-            vs.insert(makeItems(10, index * 10), vs.getItemCount() - 2);
+            vs.insert(makeItems(10, index * 8), vs.getItemCount() - 2);
             index += 1;
 
             if (index > 10) {
