--- a/latest/index.html
+++ b/latest/index.html
@@ -62,14 +62,14 @@
 
 
     <section>
-        <article class="readme"><h1>Virtual Scroll</h1><p>Virtual Scroll is a component which enables to render only visible items according to the scroll position,<br> when there are too many items to render.</p>
+        <article class="readme"><h1>Virtual Scroll</h1><p>Virtual Scroll is a component which enables to render only visible items according to the scroll position, when there are too many items to render.</p>
 <h2>Documentation</h2><ul>
-<li><strong>Getting started</strong> : https://github.com/nhnent/tui.component.virtual-scroll/wiki/getting-started/</li>
-<li><strong>API</strong> : https://nhnent.github.io/tui.component.virtual-scroll/latest/</li>
-<li><strong>Sample</strong> : https://nhnent.github.io/tui.component.virtual-scroll/latest/tutorial.html</li>
+<li>API: <a href="https://nhnent.github.io/tui.component.virtual-scroll/latest/">https://nhnent.github.io/tui.component.virtual-scroll/latest/</a></li>
+<li>Tutorial: <a href="https://github.com/nhnent/tui.component.virtual-scroll/wiki//VirtualScroll-Tutorial">https://github.com/nhnent/tui.component.virtual-scroll/wiki//VirtualScroll-Tutorial</a></li>
+<li>Example: <a href="https://nhnent.github.io/tui.component.virtual-scroll/latest/tutorial-example.html">https://nhnent.github.io/tui.component.virtual-scroll/latest/tutorial-example.html</a></li>
 </ul>
 <h2>Dependency</h2><ul>
-<li>tui.code-snippet 1.2.1</li>
+<li>tui-code-snippet: ~1.2.1</li>
 </ul>
 <h2>Test environment</h2><ul>
 <li>PC<ul>
@@ -81,16 +81,13 @@
 </ul>
 <h2>Download/Install</h2><ul>
 <li>Bower:<ul>
-<li>latest : <code>bower install tui-component-virtual-scroll</code></li>
-<li>each version : <code>bower install &quot;tui-component-virtual-scroll[#tag]&quot;</code></li>
+<li>Latest: <code>bower install tui-component-virtual-scroll</code></li>
+<li>Each version : <code>bower install &quot;tui-component-virtual-scroll[#tag]&quot;</code></li>
 </ul>
 </li>
 <li>Download: https://github.com/nhnent/tui.component.virtual-scroll/tree/master/dist/</li>
 </ul>
-<h2>Release History</h2><ul>
-<li>https://github.com/nhnent/tui.component.virtual-scroll/releases</li>
-</ul>
-<h2>License</h2><p>This software is licensed under the <a href="https://github.com/nhnent/tui.component.virtual-scroll/blob/master/LICENSE">MIT License</a>.</p></article>
+<h2>LICENSE</h2><p><a href="LICENSE">MIT LICENSE</a></p></article>
     </section>
 
 
