--- a/examples/example01-basic.html
+++ b/examples/example01-basic.html
@@ -75,7 +75,7 @@
         <div class="code-html">
             <div id="virtual-scroll-container"></div>
         </div>
-        <script type="text/javascript" src="https://cdn.rawgit.com/nhnent/tui.code-snippet/1.2.5/dist/tui-code-snippet.js"></script>
+        <script type="text/javascript" src="https://cdn.rawgit.com/nhnent/tui.code-snippet/v1.2.5/dist/tui-code-snippet.js"></script>
         <script src="../dist/tui-virtual-scroll.js"></script>
         <script class="code-js">
 
