--- a/examples/example01-basic.html
+++ b/examples/example01-basic.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>1. Basic</title>
+        <link rel="stylesheet" type="text/css" href="./css/tui-example-style.css" />
         <style>
             body {
                 padding: 0;
